INC_07696_SIGA: Calendarios por grupos y guardias vinculadas Y arreglo de cola